update functions and syntaxys